# sqlo

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: .gitignore  Dockerfile  README.md  conditions.md  conf.py  delete.md  expressions.md  getting-started.md  index.rst  insert.md  joins.md  reference.rst  security.md  select.md  update.md
docs/_build/html/: .buildinfo  README.html  conditions.html  delete.html  expressions.html  genindex.html  getting-started.html  index.html  insert.html  joins.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  security.html  select.html  update.html
docs/_build/html/.doctrees/: README.doctree  conditions.doctree  delete.doctree  environment.pickle  expressions.doctree  getting-started.doctree  index.doctree  insert.doctree  joins.doctree  reference.doctree  security.doctree  select.doctree  update.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/sqlo/: builder.html  expressions.html
docs/_build/html/_modules/sqlo/query/: delete.html  insert.html  select.html  update.html
docs/_build/html/_sources/: getting-started.md.txt  security.md.txt  select.md.txt
src/sqlo/: __init__.py  builder.py  expressions.py  security.py
src/sqlo/dialects/: base.py  mysql.py
src/sqlo/query/: base.py  delete.py  insert.py  mixins.py  select.py  update.py
tests/: benchmark.py
tests/unit/: test_advanced_conditions.py  test_builder.py  test_condition_parsing.py  test_conditions.py  test_delete_query.py  test_dialects.py  test_expressions.py  test_extended_operators.py  test_insert_query.py  test_joins.py  test_like_operator.py  test_optimizer_hints.py  test_security.py  test_select_query.py  test_update_query.py  test_where_having.py  test_where_having_extensions.py
