[project]
name = "sqlo"
version = "0.0.1"
description = "A modern, type-safe, and extensible SQL query builder for Python."
license = {text = "MIT"}
readme = "README.md"

requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/nan-guo/sqlo"
Repository = "https://github.com/nan-guo/sqlo"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy>=0.971",
    "pylint>=2.15.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
]

[tool.pdm.build]
includes = ["src/sqlo"]

[tool.isort]
profile = "black"
known_first_party = ["sqlo"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-s -vv"
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
